...
    if (key == 'C') {
      setState(() => _inputStr = "");
    } else if (key == 'BACK') {
      if (_inputStr.isNotEmpty) {
        setState(() => _inputStr = _inputStr.substring(0, _inputStr.length - 1));
      }
    } else if (key == 'ENTER') {
      _onSubmit();
    } else {
      if (_inputStr.length < 3) { // Max 999 pax
        setState(() => _inputStr += key);
      }
    }
...
